--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.6"
   }
 }
