--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.11",
     "@headlessui/react": "^0.0.0-insiders.fcfd554",
     "@heroicons/react": "^2.0.15",
+    "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
@@ -25,6 +25,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
