--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.15",
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.6",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
