--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.15",
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.6",
+    "@octokit/core": "^4.2.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
@@ -22,6 +23,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
+    "lodash-es": "^4.17.21",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,6 +32,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
