--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "swiper": "^9.0.5",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
