--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.11.9",
     "@next/font": "13.1.6",
     "@octokit/core": "^4.2.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
@@ -28,13 +29,15 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
-    "material-react-table": "^1.7.4",
     "lodash-es": "^4.17.21",
+    "material-react-table": "^1.7.4",
     "next": "13.1.6",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
